[tool.poetry]
name = "betterave-backend"
version = "0.1.0"
description = "Backend for Betterave - Pamplemousse alternative"
authors = ["ENSAE students"]
license = "MIT"
readme = "README.md"
packages = [{include = "betterave_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.21"
bcrypt = "^4.0.1"
pytest = "^7.4.2"
flask-jwt-extended = "^4.5.3"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.2"
flask-bcrypt = "^1.0.1"
werkzeug = "2.3"
flask-cors = "^4.0.0"
urllib3 = "^2.0.6"
bs4 = "^0.0.1"
requests = "^2.31.0"
unidecode = "^1.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
